// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders episode details 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    Loading...
  </div>
</div>
`;

exports[`renders home page 1`] = `
<div
  className="App"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    Loading...
  </div>
</div>
`;
